k8s/fastapi-backend/fastapi-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend-deployment
  labels:
    app: fastapi-backend-deployment
  namespace: fastapi-backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fastapi-backend-deployment
      namespace: fastapi-backend
    spec:
      containers:
        - name: fastapi-backend
          image: 'tqhung0105/fastapi-backend:latest'
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-backend-clusterip
  namespace: fastapi-backend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: fastapi-backend-deployment
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-backend-ingress
  namespace: fastapi-backend
spec:
  ingressClassName: nginx
  rules:
    - host: api.fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend-clusterip
                port:
                  number: 8000
